modify for tomcat third times